--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,32 @@
 {
-   "action": {
-  
-    },
+   "action": {},
    "declarative_net_request": {
-      "rule_resources": [ {
-         "enabled": true,
-         "id": "modify_ua_header",
-         "path": "rules.json"
-      }]
+      "rule_resources": [
+         {
+            "enabled": true,
+            "id": "modify_ua_header",
+            "path": "rules.json"
+         }
+      ]
    },
    "description": "在Chrome或其他Chromium内核浏览器中使用 New Bing AI",
-   "host_permissions": [ "*://*.bing.com/*" ],
+   "host_permissions": [
+      "*://*.bing.com/*"
+   ],
    "icons": {
       "128": "img/512.png",
       "16": "img/512.png",
       "32": "img/512.png",
       "48": "img/512.png"
    },
+   "background": {
+      "service_worker": "background.js"
+    },
    "manifest_version": 3,
    "name": "Chrome Unlock New Bing AI",
    "options_page": "settings.html",
-   "permissions": ["declarativeNetRequest"],
-   "version": "1.0.2"
+   "permissions": [
+      "declarativeNetRequest"
+   ],
+   "version": "1.0.4"
 }
